style: remove width from button to prevent overflow

--- a/src/components/Header/AllBoards/AllBoards.module.scss
+++ b/src/components/Header/AllBoards/AllBoards.module.scss
@@ -10,6 +10,7 @@ h3 {
 
 li {
   @include mixins.medium-heading;
+  cursor: pointer;
   list-style: none;
   height: 4.8rem;
   border-top-right-radius: 10rem;
@@ -27,7 +28,6 @@ li {
     align-items: center;
     gap: 1.2rem;
     height: 100%;
-    width: 100%;
     margin-left: 2.4rem;
 
     p {
